--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+nav {
+  height: 10vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: #0090e3;
 }
 
-.App-link {
-  color: #61dafb;
+.coolblue-logo {
+  height: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.posts-container {
+  margin: 2% 10%;
+  padding: 10px;
+  color: #004269;
+}
+
+.header {
+
+}
+
+.post {
+  background-color: rgba(0, 144, 227, 0.2);
+  padding: 10px;
+  margin: 5px 0;
+  border-radius: 5px;
+}
+
+h4 {
+  font-family: 'Roboto';
+  margin: 5px 0;
+  text-transform: capitalize;
+}
+
+p {
+  font-family: 'Open Sans';
+  font-style: italic;
+}
+
+.post-actions-container {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.show-comments-link {
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+.comment-container {
+  border: 3px #004269 dashed;
+  border-radius: 5px;
+  margin: 5px;
+  padding: 10px;
+}
+
+.comment-body {
+  margin: 10px 0;
+}
+
+.comment-author {
+  display: flex;
+  justify-content: flex-end;
+  font-size: 0.9rem;
+  font-style: italic;
 }
